# AusweisApp

./: .clang-tidy  .codespellrc  .dockerignore  .editorconfig  .gitlab-ci-child.yml  .gitlab-ci.yml  .grype.yml  .qmlformat.ini  .qmllint.ini  .travis.yml  .typos.toml  .yamlfmt  AUTHORS  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.rst  CTestConfig.cmake  Dockerfile  Dockerfile.vnc  Doxyfile.in  LICENSE.en.txt  LICENSE.officially.txt  LICENSE.txt  README.rst  Releasing.rst  appveyor.yml  ci.cmake  publiccode.yml  ruff.toml  uncrustify.cfg
libs/: CMakeLists.txt  CMakePresets.json  GovernikusConfig.cmake.in  README.rst  Versions.cmake  patch.cmake  patch.cmake.in  patch.py  patches.cmake  qt-install.qs  qt.cmake
libs/patches/: llhttp-0001-Add-llhttp-config-version.cmake-783.patch  llhttp-0002-chore-Support-both-dynamic-and-static-build.-789.patch  llhttp-0003-Rename-CMake-files-to-modern-variant.patch  openssl-0001-Adjust-iOS-target.patch  openssl-0001-Remove-ios-version-min.patch  openssl-0001-android-shlib_variant.patch  openssl-0002-Fix-SSL_select_next_proto.patch  openssl-0002-Fix-group-tuple-handling-in-DEFAULT-expansion.patch  openssl-0002-Harden-BN_GF2m_poly2arr-against-misuse.patch  openssl-0002-android-shlib_variant.patch  openssl-0003-Do-not-ignore-empty-associated-data-with-AES-SIV-mod.patch  openssl-0004-Fix-DH_check-excessive-time-with-over-sized-modulus.patch  openssl-Adjust-iOS-target.patch  openssl-Allow-to-continue-on-UNABLE_TO_VERIFY_LEAF_SIGNATURE.patch  openssl-Fix-an-overflow-bug-in-rsaz_512_sqr.patch  openssl-android-shlib_variant.patch  qt-Add-NfcTagType4A-and-NfcTagType4B-to-QNearFieldTarge.patch  qt-Add-Q_CORE_EXPORT-to-lcEventDispatcher.patch  qt-Add-work-around-for-freebsd-build.patch  qt-Adjust-iOS-target.patch  qt-Allow-QNearFieldTarget-to-detect-a-lost-card.patch  qt-Android-Fix-exception-when-using-Qt-to-create-a-serv.patch  qt-Android-Kill-calls-to-deprecated-func-in-API-29.patch  qt-Android-fix-crash-by-passing-the-right-Handle-to-dls.patch  qt-Android-replace-stacktrace-with-debug-message-in-sea.patch  qt-Clear-frame-on-reconnect.patch  qt-Core-IO-Bluetooth-fix-ambiguous-conversions-for-macO.patch  qt-Core-IO-Bluetooth-fix-ambiguous-conversions.patch  qt-Disable-qmltime-for-shared-build.patch  qt-Disable-unused-imageformats.patch  qt-Filesystem-avoid-crashes-on-exit-in-case-the-locale-.patch  qt-Fix-build-with-macOS-10.15-and-deployment-10.12.patch  qt-Fix-build-with-no-feature-printer-on-macOS.patch  qt-Fix-build-with-no-feature-printer.patch  qt-Fix-exception-with-Android-5.x.patch  qt-Fix-llvm-strip.patch  qt-Handle-exceptions-when-accessing-android-clipboard.patch  qt-Pass-SDK-root-to-the-linker-as-isysroot-not-Wl-sysli.patch  qt-Port-python-check-to-configure-system.patch  qt-QQuickWindowIncubationController-Use-QPointer-to-gua.patch  (+274 more)
libs/test/: valgrind.supp  valgrind.supp.DEBUG  valgrind.supp.RELEASE  valgrind.supp.RELWITHDEBINFO
resources/: CMakeLists.txt  asan_blacklist  asan_suppressions  ausweisapp.qrc  ausweisapp_android.qrc  ausweisapp_desktop.qrc  ausweisapp_ios.qrc  ausweisapp_license.qrc.in  ausweisapp_mobile.qrc  ausweisapp_webservice.qrc  config.json.in  default-providers-ios.json  default-providers.json  default-supported-devices.json  qtlogging.ini  sonar-project.properties.in  statemachine.sh.in  template.html  windows.rc
resources/hooks/: formatting
resources/html_templates/: alreadyactive.html  error.html
resources/images/: bundle_icons.icns  dmg_icons.icns  signature.jp2
resources/jenkins/: changelog.sh  changelog.xsl  check_formatting.sh  clang-gcov.py  clang-gcov.sh  import.py  notify_rb.sh
resources/json-schemas/: supported-providers.json  supported-readers.json
resources/qml/: BluetoothProgressIndicator.qml  BluetoothWorkflow.qml  BusyImageIndicator.qml  CMakeLists.txt  CardReader.qml  ContentArea.qml  ContentAreaLoader.qml  ContentAreaSelector.qml  EnterPinView.qml  Navigation.qml  NavigationItem.qml  NavigationView.qml  NfcConnectionIndication.qml  NfcProgressIndicator.qml  NfcWorkflow.qml  NpaBusyIndicatorStyle.qml  NumPadButton.qml  PinField.qml  PinPad.qml  PinPadButton.qml  ProgressCircle.qml  ProgressView.qml  ProviderContactTab.qml  ProviderHeader.qml  ProviderInfoSection.qml  ProviderModelItem.qml  ResultView.qml  SectionPage.qml  SwitchToBluetooth.qml  TabBarView.qml  TechnologyInfo.qml  TechnologySwitchButton.qml  TextCircle.qml  TitleBar.qml  TitleBarAction.qml  TitleBarMenuAction.qml  TitleBarText.qml  main.qml
resources/qml_stationary/: HistoryWidgetQmlPlugin.qml  ProviderWidgetQmlPlugin.qml
resources/shader/: ColorOverlayShader.frag  ConicalGradientShader.frag  DesaturateShader.frag  OpacityMaskShader.frag
resources/stylesheets/: common.qss  desktop.qss  macos.qss
resources/translations/: ausweisapp2_de.ts  ausweisapp2_ru.ts  ausweisapp2_uk.ts  ausweisapp_de.ts  ausweisapp_ru.ts  ausweisapp_uk.ts
resources/travis/: build.sh  common.sh  setup.sh
resources/updatable-files/: supported-providers.json  supported-readers.json
src/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  MetaTypeRegister.cpp  MetaTypeRegister.h  config.h.in  main.cpp  windows.rc
src/activation/: CMakeLists.txt
src/aidl/: AidlBinder.java  CMakeLists.txt  PskManager.cpp  PskManager.h  UIPlugInAidl.cpp  UIPlugInAidl.h
src/android/: AusweisApp2LocalIfdService.java  AusweisApp2LocalIfdServiceConnection.java  AusweisApp2Service.java  BootstrapHelper.java  LogHandler.java  MainActivity.java  UpdateReceiver.java
src/autostart_helper/: main.mm
src/card/: CMakeLists.txt
src/cli/: CMakeLists.txt  ConsoleReader.cpp  ConsoleReader.h  UIPlugInCli.cpp  UIPlugInCli.h
src/configuration/: CMakeLists.txt  CallCost.cpp  CallCost.h  LanguageString.cpp  LanguageString.h  ProviderConfiguration.cpp  ProviderConfiguration.h  ProviderConfigurationInfo.cpp  ProviderConfigurationInfo.h  ProviderConfigurationParser.cpp  ProviderConfigurationParser.h  ReaderConfiguration.cpp  ReaderConfiguration.h  ReaderConfigurationInfo.cpp  (+7 more)
test/: CMakeLists.txt
utils/: CMakeLists.txt
(+5331 files in other folders)
